# Chitti_ai

./: README.md
Desktop/CHITTI COMPANIAN/V3/: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  31B_sprint.md  AGENT.md  AI_MODEL_AUDIT_REPORT.md  AI_PROVIDER_PLATFORM_REFINEMENT.md  ARCHITECTURE_FROZEN_v3.0.md  CAPABILITY_DEVELOPMENT_CONSTITUTION.md  CAPABILITY_EXPERIENCE_IMPLEMENTATION_AUDIT.md  CHITTI_Development_Report_2026-07-16.md  CHITTI_Development_Report_2026-07-18.md  CHITTI_ENGINEERING_PROCESS_STANDARD.md  CHITTI_PLATFORM_SPEC.md  Chitti Master dev plan.md  DEVELOPMENT_CONSTITUTION.md  DEVELOPMENT_WORKFLOW.md  ENGINEERING_RULES.md  EXPERIENCE_001_CERTIFICATION.md  Features.md  Features_List.md  Folder Structure.md  MASTER_ARCHITECTURE_FLOW.md  MASTER_CAPABILITY_INVENTORY.md  MASTER_CAPABILITY_OWNERSHIP_MAP.md  MVP_ROADMAP.md  MVP_SCOPE.md  OCR_PROVIDER_ARCHITECTURE_AUDIT.md  OS_INTEGRATION_DEPENDENCY_IMPACT_ANALYSIS.md  PLATFORM_COMPATIBILITY.md  PRE_IMPLEMENTATION_AUDIT_REMOTE_COMPANION.md  PRE_IMPLEMENTATION_AUDIT_SYSTEM_SETTINGS_CONTROL.md  PRE_IMPLEMENTATION_AUDIT_W1S2B_OS_CONTROL_AND_INTEGRATION.md  PRE_IMPLEMENTATION_AUDIT_W1S2_OS_INTELLIGENCE.md  PRE_IMPLEMENTATION_AUDIT_W2S3_WORKSPACE_PROJECT_INTELLIGENCE.md  PRE_IMPLEMENTATION_AUDIT_W3S1_INTELLIGENT_TASK_EXECUTION.md  PRE_IMPLEMENTATION_AUDIT_W3S2A_WORKFLOW_TEMPLATES_report.md  PRODUCT_V1_ROADMAP.md  PROJECT_BLUEPRINT.md  (+96 more)
Desktop/CHITTI COMPANIAN/V3/.agents/: AGENTS.md
Desktop/CHITTI COMPANIAN/V3/AUDIT/: DESKTOP_AUTOMATION_EVALUATION.md  DESKTOP_PROVIDER_RECOMMENDATION.md  append_rules.py  audit_report.md  audit_stats.py  implementation_plan.md  task.md  walkthrough.md
Desktop/CHITTI COMPANIAN/V3/docs/: 31A_sprint.md  (+22 more)
(+2036 files in other folders)
