[project]
name = "chitti-companion"
version = "0.1.0"
description = "CHITTI AI Companion Desktop Application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "pyyaml>=6.0.2",
    "PySide6>=6.6.0",
    "sounddevice>=0.4.6",
    "numpy>=1.26.0",
    "soundfile>=0.12.1",
    "openai>=1.14.0",
    "google-genai>=0.5.0",
    "ollama>=0.1.7",
    "google-auth>=2.28.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.122.0",
    "playwright>=1.42.0",
    "faster-whisper>=1.0.0",
    "piper-tts>=1.2.0",
    "psutil>=5.9.8",
    "keyring>=24.3.1",
    "platformdirs>=4.2.0",
    "openwakeword>=0.6.0",
    "pyautogui>=0.9.54",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.11",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-qt>=4.2.0",
    "coverage>=7.4.0",
]

[tool.uv]
package = false

[tool.setuptools]
packages = ["desktop"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "RUF", # ruff-specific rules
]
ignore = []

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "PySide6.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [
    "desktop/tests",
]
qt_api = "pyside6"
